# PyEarthTools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  MANIFEST.in  NOTICE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: interrogate.yml  python-app.yml  run-pre-commit.yml
docs/: Roadmap.md  api.md  catalogue.md  conf.py  config.md  devguide.md  index.md  installation.md  maintainer.md  newproject.md  newuser.md  projectideas.md  rtdrequirements.txt
docs/api/: api.md
docs/data/: data_api.md  data_index.md
docs/nbook/: Gallery.ipynb  data  tutorial
docs/utils/: utils_index.md
fourcastnext/: __init__.py  model.py
fourcastnext/architecture/: afnonet.py
notebooks/: Gallery.ipynb  Project_config.ipynb
notebooks/data/: CustomDataIndex.ipynb  GettingComplexSeries.ipynb  RegionCutting.ipynb
notebooks/demo/: FourCastNeXt_Inference.ipynb
notebooks/pipeline/: Basics.ipynb  Branching.ipynb  Modifications.ipynb  Operations.ipynb
notebooks/tutorial/: Accessing_ERA5_Data.ipynb  CNN-Model-Training.ipynb  CNN_model_training.ipynb  Data_Pipelines.ipynb  ENSO_Forecast.ipynb  ENSO_Pipeline.ipynb  FourCastMini Demo.ipynb  FourCastMini_Demo.ipynb  FourCastNeXt_Training.ipynb  MLX-Demo-Custom-Arch.ipynb  MLX_Demo_CustomArch.ipynb  Met_Office_ML_Demo_MOGLOBAL.ipynb  Met_Office_ML_Demo_UKV.ipynb  Met_Office_Site_Archive.ipynb  MultipleSources.ipynb  (+2 more)
old_docs/: mkdocs.yml  requirements.txt
scripts/: gen_ref_pages.py
(+59 files in other folders)
