[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]


[project]
name = "edit-archive-NCI"
description = "EDIT archive for NCI"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["edit"]
authors = [
  {email = "harrison.cook@bom.gov.au"},
  {name = "Harrison Cook"}
]
maintainers = [
  {name = "Harrison Cook", email = "harrison.cook@bom.gov.au"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "edit.data>=1.0.0",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.urls]
homepage = "http://bom.gov.au"
documentation = "https://git.nci.org.au/bom/dset/edit-package/archives/NCI"
repository = "https://git.nci.org.au/bom/dset/edit-package/archives/NCI"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools_scm]
version_file = "src/edit_archive_NCI/_version.py"